Updating spec. Added delete endpoint. Got rid of temp code regarding podname.develop.tapis.io nginx routing.
