# service/api_pods_podid_func.py
@@ -1,5 +1,5 @@
 from fastapi import APIRouter
-from models import Pod, NewPod, UpdatePod, Password, SetPermission, DeletePermission, getPodReturn
+from models import Pod, NewPod, UpdatePod, Password, SetPermission, DeletePermission, PodResponse, PodPermissionsResponse, PodCredentialsResponse, PodLogsResponse
 from channels import CommandChannel
 from codes import OFF, ON, RESTART, REQUESTED
 from tapisservice.tapisfastapi.utils import g, ok
@@ -12,8 +12,10 @@ router = APIRouter()
 
 #### /pods/{pod_id}/functionHere
 
-@router.get("/pods/{pod_id}/credentials", tags=["pods"], summary="get_pod_credentials", operation_id="get_pod_credentials")
+@router.get("/pods/{pod_id}/credentials", tags=["Credentials"], summary="get_pod_credentials", operation_id="get_pod_credentials", response_model=PodCredentialsResponse)
 async def get_pod_credentials(pod_id):
+    logger.info(f"GET /pods/{pod_id}/credentials - Top of get_pod_credentials.")
+
     # Do more update things.
     password = Password.db_get_with_pk(pod_id, g.request_tenant_id, g.site_id)
     user_cred = {"user_username": password.user_username,
@@ -22,24 +24,28 @@ async def get_pod_credentials(pod_id):
     return ok(result=user_cred)
 
 
-@router.get("/pods/{pod_id}/logs", tags=["pods"], operation_id="get_pod_logs")
+@router.get("/pods/{pod_id}/logs", tags=["Logs"], summary="get_pod_logs", operation_id="get_pod_logs", response_model=PodLogsResponse)
 async def get_pod_logs(pod_id):
+    logger.info(f"GET /pods/{pod_id}/logs - Top of get_pod_logs.")
 
     pod = Pod.db_get_with_pk(pod_id, tenant=g.request_tenant_id, site=g.site_id)
 
     return ok(result={"logs": pod.logs}, msg = "Pod logs retrieved successfully.")
 
 
-@router.get("/pods/{pod_id}/permissions", tags=["pods"], summary="get_pod_permissions", operation_id="get_pod_permissions")
+@router.get("/pods/{pod_id}/permissions", tags=["Permissions"], summary="get_pod_permissions", operation_id="get_pod_permissions", response_model=PodPermissionsResponse)
 async def get_pod_permissions(pod_id):
+    logger.info(f"GET /pods/{pod_id}/permissions - Top of get_pod_permissions.")
 
     pod = Pod.db_get_with_pk(pod_id, tenant=g.request_tenant_id, site=g.site_id)
 
     return ok(result={"permissions": pod.permissions}, msg = "Pod permissions retrieved successfully.")
 
 
-@router.post("/pods/{pod_id}/permissions", tags=["pods"], summary="set_pod_permissions", operation_id="set_pod_permission")
+@router.post("/pods/{pod_id}/permissions", tags=["Permissions"], summary="set_pod_permission", operation_id="set_pod_permission", response_model=PodPermissionsResponse)
 async def set_pod_permission(pod_id, set_permission: SetPermission):
+    logger.info(f"POST /pods/{pod_id}/permissions - Top of set_pod_permissions.")
+
     inp_user = set_permission.user
     inp_level = set_permission.level
 
@@ -67,8 +73,10 @@ async def set_pod_permission(pod_id, set_permission: SetPermission):
     return ok(result={"permissions": pod.permissions}, msg = "Pod permissions updated successfully.")
 
 
-@router.delete("/pods/{pod_id}/permissions", tags=["pods"], summary="delete_pod_permissions", operation_id="delete_pod_permission")
+@router.delete("/pods/{pod_id}/permissions", tags=["Permissions"], summary="delete_pod_permission", operation_id="delete_pod_permission", response_model=PodPermissionsResponse)
 async def delete_pod_permission(pod_id, delete_permission: DeletePermission):
+    logger.info(f"DELETE /pods/{pod_id}/permissions - Top of delete_pod_permission.")
+
     inp_user = delete_permission.user
 
     pod = Pod.db_get_with_pk(pod_id, tenant=g.request_tenant_id, site=g.site_id)
@@ -98,8 +106,9 @@ async def delete_pod_permission(pod_id, delete_permission: DeletePermission):
     return ok(result=perm_list, msg = "Pod permissions updated successfully.")
 
 
-@router.get("/pods/{pod_id}/stop", tags=["pods"], summary="stop_pod", operation_id="stop_pod", response_model=getPodReturn)
+@router.get("/pods/{pod_id}/stop", tags=["Pods"], summary="stop_pod", operation_id="stop_pod", response_model=PodResponse)
 async def stop_pod(pod_id):
+    logger.info(f"GET /pods/{pod_id}/stop - Top of stop_pod.")
 
     pod = Pod.db_get_with_pk(pod_id, tenant=g.request_tenant_id, site=g.site_id)
     pod.status_requested = OFF
@@ -108,8 +117,9 @@ async def stop_pod(pod_id):
     return ok(result=pod.display(), msg = "Updated pod's status_requested to OFF.")
 
 
-@router.get("/pods/{pod_id}/start", tags=["pods"], summary="start_pod", operation_id="start_pod", response_model=getPodReturn)
+@router.get("/pods/{pod_id}/start", tags=["Pods"], summary="start_pod", operation_id="start_pod", response_model=PodResponse)
 async def start_pod(pod_id):
+    logger.info(f"GET /pods/{pod_id}/start - Top of start_pod.")
 
     pod = Pod.db_get_with_pk(pod_id, tenant=g.request_tenant_id, site=g.site_id)
     pod.status_requested = ON
@@ -127,8 +137,9 @@ async def start_pod(pod_id):
     return ok(result=pod.display(), msg = "Updated pod's status_requested to ON and requested pod.")
 
 
-@router.get("/pods/{pod_id}/restart", tags=["pods"], summary="restart_pod", operation_id="restart_pod", response_model=getPodReturn)
+@router.get("/pods/{pod_id}/restart", tags=["Pods"], summary="restart_pod", operation_id="restart_pod", response_model=PodResponse)
 async def restart_pod(pod_id):
+    logger.info(f"GET /pods/{pod_id}/restart - Top of restart_pod.")
 
     pod = Pod.db_get_with_pk(pod_id, tenant=g.request_tenant_id, site=g.site_id)
     pod.status_requested = RESTART
